<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/coordinator_layout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".WidgetConfigureActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:navigationIcon="@drawable/ic_launcher"
            app:popupTheme="@style/MyTheme.PopupOverlay"
            app:title="@string/configure_header"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@android:string/ok"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/save_button"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/settings_include_header"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <CheckBox
                    android:id="@+id/include_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/settings_search_button"/>

                <CheckBox
                    android:id="@+id/include_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/settings_voice_button"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="4dp"
                    android:background="@color/colorAccentDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/settings_theme_header"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioGroup
                    android:id="@+id/themeGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/radio_dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:drawableLeft="@drawable/dark_sample_search"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/dark_sample_search"
                        android:text="@string/theme_dark"/>

                    <RadioButton
                        android:id="@+id/radio_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/light_sample_search"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/light_sample_search"
                        android:text="@string/theme_light"/>
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="4dp"
                    android:background="@color/colorAccentDark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/settings_settings_header"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <CheckBox
                    android:id="@+id/checkbox_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/settings_small"/>

                <TextView
                    android:id="@+id/small_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/settings_small_help_off"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <CheckBox
                    android:id="@+id/checkbox_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/settings_include_background"/>

                <TextView
                    android:id="@+id/background_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/settings_background_help_off"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>